FIX overflow of items' name in /customize

--- a/src/components/Inventory/PopupFromBottom/PopupFromBottom.module.scss
+++ b/src/components/Inventory/PopupFromBottom/PopupFromBottom.module.scss
@@ -122,6 +122,8 @@
                         font-family: "CHEDROS", sans-serif;
                         font-size: 1.3rem;
                         font-weight: bold;
+                        word-wrap: break-word;
+                        display: inline-block;
                     }
 
                     .back-name {
